--- a/index.css
+++ b/index.css
@@ -124,6 +124,15 @@ body {
   flex-direction: column;
   gap: 20px;
 }
+.github-icon{
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  z-index: 999;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
 .text-wrapper {
   width: 320px;
   text-align: center;
